--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -478,3 +478,8 @@
     input.value = '';
   }
 </script>
+
+<!-- 추가된 부분 - 이미지 -->
+<div class="image-container" style="position: fixed; bottom: 5%; right: 10%; z-index: -1;">
+  <img src="https://file.gamejob.co.kr/net/Community/Gallery/View?FN=/Image/2023/3/Portfolio_img_08202851_1.png" alt="Cute Image" style="width: 120%; filter: grayscale(70%);">
+</div>
