--- a/CapstoneDesign_23_2/monthpage/index.html
+++ b/CapstoneDesign_23_2/monthpage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,13 +17,41 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>EduLog</title>
+    <style>
+        /* Additional Styles for Month Page */
+        body {
+            background-color: #f2f2f2;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #fff !important;
+        }
+
+        .content {
+            margin-top: 20px;
+        }
+
+        #calendar {
+            max-width: 90%;
+            margin: 0 auto;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
+
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
+                aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
@@ -31,16 +60,16 @@
                         <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../weekpage/weekpage.html">week</a>
+                        <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
                     </li>
                     <li class="nav-item">
-                        <a class "nav-link" href="../monthpage/index.html">Month</a>
+                        <a class="nav-link" href="../monthpage/index.html">Month</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                            <li><a class="dropdown-item" href="#">search</a></li>
+                            <li><a class="dropdown-item" href="#">Search</a></li>
                             <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
@@ -49,17 +78,17 @@
         </div>
     </nav>
 
+    <!-- Content -->
     <div class="content">
         <div id='calendar'></div>
     </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- FullCalendar Scripts -->
     <script src='fullcalendar/packages/core/main.js'></script>
     <script src='fullcalendar/packages/interaction/main.js'></script>
     <script src='fullcalendar/packages/daygrid/main.js'></script>
 
+    <!-- Your Calendar Initialization Script -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var calendarEl = document.getElementById('calendar');
@@ -124,6 +153,7 @@
                         url: 'http://google.com/',
                         start: '2023-10-28'
                     }
+                    // You can add more events as needed
                 ],
                 dateClick: function (info) {
                     var title = prompt('일정 제목:');
@@ -153,9 +183,14 @@
         });
     </script>
 
+    <!-- Bootstrap and Main Scripts -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
