--- a/CapstoneDesign_23_2/settingpage/settingpage.html
+++ b/CapstoneDesign_23_2/settingpage/settingpage.html
@@ -1,114 +1,196 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ko">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EduLog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet">
     <style>
-      table, th, td{
-        border: 1px solid black;
-      }
-      th, td {
-        padding: 10px;
-        text-align: center;
-      }
+        table, th, td {
+            border: 1px solid black;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+
+        /* 추가된 스타일 - Setting Page */
+        body {
+            background-color: #f2f2f2;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #fff !important;
+        }
+
+        .container {
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+            margin-top: 20px;
+            padding: 20px;
+        }
+
+        .form-check, .form-check-label {
+            margin-bottom: 10px;
+        }
+
+        .btn-primary, .btn-danger {
+            margin-top: 10px;
+        }
+        #signupForm {
+            display: none;
+        }
     </style>
     <script>
-      function addSubject() {
-        var table = document.getElementById("subjectTable");
-        var row = table.insertRow(-1);
-        var cell1 = row.insertCell(0);
-        var cell2 = row.insertCell(1);
+        function addSubject() {
+            var table = document.getElementById("subjectTable");
+            var row = table.insertRow(-1);
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
 
-        var select = document.createElement("select");
-        var options = ["국어", "수학", "영어", "과학", "사회", "체육"];
-        for (var i = 0; i < options.length; i++) {
-          var option = document.createElement("option");
-          option.text = options[i];
-          select.add(option);
+            var select = document.createElement("select");
+            var options = ["국어", "수학", "영어", "과학", "사회", "체육"];
+            for (var i = 0; i < options.length; i++) {
+                var option = document.createElement("option");
+                option.text = options[i];
+                select.add(option);
+            }
+
+            cell1.appendChild(select);
+            cell2.innerHTML = '<input type="number" value="0" min="0">';
         }
 
-        cell1.appendChild(select);
-        cell2.innerHTML = '<input type="number" value="0" min="0">';
-      }
-
-      function removeSubject() {
-        var table = document.getElementById("subjectTable");
-        if (table.rows.length > 1) {
-          table.deleteRow(-1);
+        function removeSubject() {
+            var table = document.getElementById("subjectTable");
+            if (table.rows.length > 1) {
+                table.deleteRow(-1);
+            }
         }
-      }
     </script>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+</head>
+
+<body>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
+                aria-controls="navbarsExample10" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../weekpage/weekpage.html">week</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../monthpage/index.html">Month</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                <li><a class="dropdown-item" href="#">search</a></li>
-                <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
-              </ul>
-            </li>
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../monthpage/index.html">Month</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                        <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-      </div>
-    </nav>
-    <div class="container">
-      <h1>This is settingpage.</h1>
-      
-      <!-- 1. 일반 설정 - 알림 허용/거부, 알림 시 진동 - 허용/거부 -->
-      <h2>1. 일반 설정</h2>
-      <form>
-        <div class="form-check">
+    </div>
+</nav>
+
+<!-- Content -->
+<div class="container">
+  <h1>설정</h1>
+
+  <!-- 1. 일반 설정 - 알림 허용/거부, 알림 시 진동 - 허용/거부 -->
+  <h2>1. 일반 설정</h2>
+  <form>
+      <div class="form-check">
           <input type="checkbox" class="form-check-input" id="allowNotifications">
           <label class="form-check-label" for="allowNotifications">알림 허용</label>
-        </div>
-        <div class="form-check">
+      </div>
+      <div class="form-check">
           <input type="checkbox" class="form-check-input" id="vibrateOnNotifications">
           <label class="form-check-label" for="vibrateOnNotifications">알림 시 진동 허용</label>
-        </div>
-        <button type="button" class="btn btn-primary">저장</button>
-      </form>
-      
-      <!-- 2. 시수 설정할 수 있는 기능 (과목 - 시수) -->
-      <h2>2. 시수 설정</h2>
-      <table id="subjectTable">
-        <tr>
+      </div>
+      <button type="button" class="btn btn-primary">저장</button>
+  </form>
+
+  <!-- 2. 시수 설정할 수 있는 기능 (과목 - 시수) -->
+  <h2>2. 시수 설정</h2>
+  <table id="subjectTable">
+      <tr>
           <th>과목</th>
           <th>시수</th>
-        </tr>
-        <tr>
+      </tr>
+      <tr>
           <td>
-            <select>
-              <option value="국어">국어</option>
-            </select>
+              <select>
+                  <option value="국어">국어</option>
+              </select>
           </td>
           <td><input type="number" value="0" min="0"></td>
-        </tr>
-      </table>
-      <button type="button" class="btn btn-primary" onclick="addSubject()">과목 추가</button>
-      <button type="button" class="btn btn-danger" onclick="removeSubject()">과목 제거</button>
-    </div>
+      </tr>
+  </table>
+  <button type="button" class="btn btn-primary" onclick="addSubject()">과목 추가</button>
+  <button type="button" class="btn btn-danger" onclick="removeSubject()">과목 제거</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+  <<!-- 3. 회원가입 폼 -->
+<div style="margin-top: 20px; margin-bottom: 30px;">
+  <h2 id="signupText" style="font-size: 18px; color: #007bff;">계정이 없으십니까? <a href="#" onclick="toggleSignupForm()">회원가입</a></h2>
+  <form id="signupForm" style="display: none;">
+      <div class="mb-3">
+          <label for="signupName" class="form-label">이름</label>
+          <input type="text" class="form-control" id="signupName" required>
+      </div>
+      <div class="mb-3">
+          <label for="signupAge" class="form-label">나이</label>
+          <input type="number" class="form-control" id="signupAge" required>
+      </div>
+      <div class="mb-3">
+          <label for="signupEmail" class="form-label">이메일</label>
+          <input type="email" class="form-control" id="signupEmail" required>
+      </div>
+      <div class="mb-3">
+          <label for="signupPhone" class="form-label">전화번호</label>
+          <input type="tel" class="form-control" id="signupPhone" required>
+      </div>
+      <button type="button" class="btn btn-primary" onclick="submitSignupForm()">가입</button>
+      <button type="button" class="btn btn-secondary" onclick="toggleSignupForm()">취소</button>
+  </form>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
+
+<script>
+  // 회원가입 폼 토글 함수
+  function toggleSignupForm() {
+      var signupForm = document.getElementById("signupForm");
+      var signupText = document.getElementById("signupText");
+
+      if (signupForm.style.display === "none") {
+          signupForm.style.display = "block";
+          signupText.innerHTML = "이미 계정이 있으십니까? <a href='#' onclick='toggleSignupForm()'>로그인</a>";
+      } else {
+          signupForm.style.display = "none";
+          signupText.innerHTML = "계정이 없으십니까? <a href='#' onclick='toggleSignupForm()'>회원가입</a>";
+      }
+  }
+</script>
+</body>
 </html>
