--- a/CapstoneDesign_23_2/index/index.html
+++ b/CapstoneDesign_23_2/index/index.html
@@ -8,6 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link href="index.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
   <style>
     /* 화면크기 1920-1080, 1536-864, 1280-730, */
     @media (max-width: 1554px) {
@@ -197,35 +202,37 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
-    <div class="container-fluid">
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
+  <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
-        aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../weekpage/weekpage.html">week</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../monthpage/index.html">Month</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-              <li><a class="dropdown-item" href="#">search</a></li>
-              <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
-            </ul>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="../monthpage/index.html">Month</a>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                      aria-expanded="false">Menu</a>
+                  <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                      <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
+                  </ul>
+              </li>
+          </ul>
       </div>
-    </div>
+  </div>
+</nav>
   </nav>
   <div class="container">
    
