--- a/index/profile.html
+++ b/index/profile.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="ko">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Edulog</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <style>
+        .content-container {
+            max-width: 600px;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 50px;
+        }
+
+        .toggle-buttons {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+
+        .btn-primary {
+            background-color: #712cf9;
+            border-color: #712cf9;
+        }
+
+        .btn-primary:hover {
+            background-color: #6528e0;
+            border-color: #6528e0;
+        }
+
+        .btn-primary:focus {
+            box-shadow: 0 0 0 0.2rem rgba(113, 44, 249, 0.25);
+        }
+    </style>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="프로필 페이지 네비게이션 바">
+        <div class="container-fluid">
+            <!-- 네비게이션 바 내용은 이전과 동일하게 유지 -->
+        </div>
+    </nav>
+
+    <div class="content-container">
+        <h2 class="mb-4">프로필</h2>
+
+        <!-- 학교 입력 -->
+        <div class="form-group mb-3">
+            <label for="schoolInput">학교 입력</label>
+            <input type="text" class="form-control" id="schoolInput" placeholder="학교명 입력">
+        </div>
+
+        <!-- 교사 선택 -->
+        <div class="form-group mb-3">
+            <label for="teacherRole">교사 선택</label>
+            <select class="form-select" id="teacherRole">
+                <option value="homeroom">담임</option>
+                <option value="subjectTeacher">교과 전담</option>
+                <option value="specialTeacher">특수 교사</option>
+            </select>
+        </div>
+
+        <!-- 맡을 학년 선택 -->
+        <div class="form-group mb-3">
+            <label for="selectedGrade">맡을 학년</label>
+            <select class="form-select" id="selectedGrade">
+                <option value="1">1학년</option>
+                <option value="2">2학년</option>
+                <option value="3">3학년</option>
+                <option value="4">4학년</option>
+                <option value="5">5학년</option>
+                <option value="6">6학년</option>
+            </select>
+        </div>
+
+        <!-- 맡을 반 선택 -->
+        <div class="form-group mb-3">
+            <label for="selectedClass">맡을 반</label>
+            <select class="form-select" id="selectedClass">
+                <option value="all">전체(교과전담)</option>
+                <option value="1">1반</option>
+                <option value="2">2반</option>
+                <option value="3">3반</option>
+                <option value="4">4반</option>
+                <option value="5">5반</option>
+                <option value="6">6반</option>
+                <option value="7">7반</option>
+                <option value="8">8반</option>
+            </select>
+        </div>
+
+        <!-- 과목 선택 -->
+        <div class="form-group mb-3">
+            <label for="selectedSubject">과목</label>
+            <select class="form-select" id="selectedSubject">
+                <option value="all">전체(담임)</option>
+                <option value="korean">국어</option>
+                <option value="math">수학</option>
+                <option value="english">영어</option>
+                <option value="science">과학</option>
+                <option value="social">사회</option>
+                <option value="physicalEducation">체육</option>
+                <option value="art">미술</option>
+                <option value="music">음악</option>
+            </select>
+        </div>
+
+        <!-- 저장 버튼 -->
+        <button id="saveProfileButton" class="btn btn-primary">저장</button>
+    </div>
+
+    <script src="profile.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
