--- a/index/index.html
+++ b/index/index.html
@@ -226,6 +226,7 @@
                       aria-expanded="false">Menu</a>
                   <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                      <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
                       <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                   </ul>
               </li>
