--- a/monthpage/index.html
+++ b/monthpage/index.html
@@ -70,7 +70,7 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                            <li><a class="dropdown-item" href="#">Search</a></li>
+                            <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
