--- a/settingpage/settingpage.html
+++ b/settingpage/settingpage.html
@@ -109,6 +109,7 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                            <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
