--- a/weekpage/weekpage.html
+++ b/weekpage/weekpage.html
@@ -103,6 +103,14 @@
             margin-top: 10px;
             cursor: pointer;
         }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #fff !important;
+        }
     </style>
 </head>
 
@@ -123,7 +131,7 @@
                         <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../weekpage/weekpage.html">week</a>
+                        <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../monthpage/index.html">Month</a>
@@ -132,7 +140,7 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                            <li><a class="dropdown-item" href="#">search</a></li>
+                            <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
                             <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
